main/k8s/services/svc/api-login-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-login-service
  namespace: devops-exam-teamk1
  annotations:
    konghq.com/override: preferred-kong-configuration
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
      app: api-login
  type: ClusterIP
