main/k8s/services/svc/api-reward-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-reward-service
  namespace: devops-exam-teamk1
  annotations:
    konghq.com/override: preferred-kong-configuration
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: api-reward
  type: ClusterIP
