main/k8s/services/svc/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: devops-exam-teamk1
  annotations:
    konghq.com/override: preferred-kong-configuration
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: web
