main/k8s/services/svc/k1-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: devops-exam-teamk1
  annotations:
    konghq.com/override: preferred-kong-configuration
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: www.teamk1.com
    http:
      paths:
      - path: /api/login/
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-login-service
            port:
              number: 3000
      - path: /api/customer/
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-customer-service
            port:
              number: 3000
      - path: /api/reward/
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-reward-service
            port:
              number: 3000
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-service
            port:
              number: 80
